--- a/app/src/main/res/layout/activity_add_recipe.xml
+++ b/app/src/main/res/layout/activity_add_recipe.xml
@@ -33,9 +33,9 @@
 
             <LinearLayout
                 android:id="@+id/recipeDetails"
-                android:layout_below="@+id/recipeImageView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/recipeImageView"
                 android:layout_centerHorizontal="true"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
@@ -43,17 +43,17 @@
                 <Spinner
                     android:id="@+id/spinnerRecipeType"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
 
                 <Spinner
                     android:id="@+id/spinnerRecipeTime"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
 
                 <Spinner
                     android:id="@+id/spinnerRecipePax"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
