--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,30 +8,22 @@
 
     <LinearLayout
         android:id="@+id/recipeDetails"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
 
         <Spinner
             android:id="@+id/spinnerRecipeType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_weight="1" />
-
         <Spinner
             android:id="@+id/spinnerRecipeTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_weight="1" />
 
         <Spinner
             android:id="@+id/spinnerRecipePax"
